code to capture the value of the obj

--- a/currency-exchange/index.html
+++ b/currency-exchange/index.html
@@ -20,14 +20,15 @@
       <form>
         <div class="amount">
           <p>Enter amount</p>
-          <input value="100 " type="text" />
+          <!-- <input type="number" value="100 " /> -->
+          <input type="number" value="1" min="1" step="any" />
         </div>
         <div class="dropdown">
           <div class="from">
             <p>From</p>
             <div class="select-container">
               <img src="https://flagsapi.com/US/flat/64.png" />
-              <select name="from"></select>
+              <select id="from-currency-select"></select>
             </div>
           </div>
 
@@ -36,12 +37,13 @@
             <p>To</p>
             <div class="select-container">
               <img src="https://flagsapi.com/IN/flat/64.png" />
-              <select name="to"></select>
+              <select id="to-currency-select"></select>
             </div>
           </div>
         </div>
         <div class="msg">1USD = 81.1 INR</div>
         <button id="btn">Get Exchange Rate</button>
+        <p id="result"></p>
       </form>
     </div>
     <script src="codes.js"></script>
